# serializer version: 1
# name: test_charging_limit[unknown_make-200-success-90-90-NoneType-1-v2]
  list([
    tuple(
      'post',
      URL('http://test.local/v2.0/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/charge/limit'),
      dict({
        'limit': 0.9,
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
  ])
# ---
# name: test_charging_limit[unknown_make-200-success-90-90-NoneType-1-v3]
  list([
    tuple(
      'post',
      URL('http://test.local/v3/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/commands/charge/set-limit'),
      dict({
        'data': dict({
          'attributes': dict({
            'percent': 90.0,
          }),
        }),
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
  ])
# ---
# name: test_charging_limit[unknown_make-401-unauthroized-90-80-HomeAssistantError-1-v2]
  list([
    tuple(
      'post',
      URL('http://test.local/v2.0/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/charge/limit'),
      dict({
        'limit': 0.9,
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
  ])
# ---
# name: test_charging_limit[unknown_make-401-unauthroized-90-80-HomeAssistantError-1-v3]
  list([
    tuple(
      'post',
      URL('http://test.local/v3/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/commands/charge/set-limit'),
      dict({
        'data': dict({
          'attributes': dict({
            'percent': 90.0,
          }),
        }),
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
  ])
# ---
# name: test_charging_limit[unknown_make-409-unreachable-90-80-HomeAssistantError-1-v2]
  list([
    tuple(
      'post',
      URL('http://test.local/v2.0/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/charge/limit'),
      dict({
        'limit': 0.9,
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
  ])
# ---
# name: test_charging_limit[unknown_make-409-unreachable-90-80-HomeAssistantError-1-v3]
  list([
    tuple(
      'post',
      URL('http://test.local/v3/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/commands/charge/set-limit'),
      dict({
        'data': dict({
          'attributes': dict({
            'percent': 90.0,
          }),
        }),
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
  ])
# ---
# name: test_charging_limit[unknown_make-500-server-90-80-HomeAssistantError-4-v2]
  list([
    tuple(
      'post',
      URL('http://test.local/v2.0/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/charge/limit'),
      dict({
        'limit': 0.9,
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
    tuple(
      'post',
      URL('http://test.local/v2.0/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/charge/limit'),
      dict({
        'limit': 0.9,
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
    tuple(
      'post',
      URL('http://test.local/v2.0/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/charge/limit'),
      dict({
        'limit': 0.9,
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
    tuple(
      'post',
      URL('http://test.local/v2.0/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/charge/limit'),
      dict({
        'limit': 0.9,
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
  ])
# ---
# name: test_charging_limit[unknown_make-500-server-90-80-HomeAssistantError-4-v3]
  list([
    tuple(
      'post',
      URL('http://test.local/v3/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/commands/charge/set-limit'),
      dict({
        'data': dict({
          'attributes': dict({
            'percent': 90.0,
          }),
        }),
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
    tuple(
      'post',
      URL('http://test.local/v3/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/commands/charge/set-limit'),
      dict({
        'data': dict({
          'attributes': dict({
            'percent': 90.0,
          }),
        }),
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
    tuple(
      'post',
      URL('http://test.local/v3/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/commands/charge/set-limit'),
      dict({
        'data': dict({
          'attributes': dict({
            'percent': 90.0,
          }),
        }),
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
    tuple(
      'post',
      URL('http://test.local/v3/vehicles/a1d50709-3502-4faa-ba43-a5c7565e6a09/commands/charge/set-limit'),
      dict({
        'data': dict({
          'attributes': dict({
            'percent': 90.0,
          }),
        }),
      }),
      dict({
        'authorization': 'Bearer mock-token',
      }),
    ),
  ])
# ---
# name: test_charging_limit[unknown_make-None-None-110-80-ServiceValidationError-0-v2]
  list([
  ])
# ---
# name: test_charging_limit[unknown_make-None-None-110-80-ServiceValidationError-0-v3]
  list([
  ])
# ---
# name: test_charging_limit[unknown_make-None-None-40-80-ServiceValidationError-0-v2]
  list([
  ])
# ---
# name: test_charging_limit[unknown_make-None-None-40-80-ServiceValidationError-0-v3]
  list([
  ])
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-number][number.byd_seal_u_dm_i_charge_limit]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'BYD Seal U Dm-i Charge Limit',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:battery-charging-80',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 50.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.byd_seal_u_dm_i_charge_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-number][number.jaguar_i_pace_charge_limit]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'JAGUAR I-PACE Charge Limit',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:battery-charging-80',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 50.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.jaguar_i_pace_charge_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-number][number.polestar_polestar_2_charge_limit]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'POLESTAR Polestar 2 Charge Limit',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:battery-charging-80',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 50.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.polestar_polestar_2_charge_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-number][number.vw_id_4_charge_limit]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-09-18T23:30:32+00:00',
      'fetched_at': '2025-09-18T23:39:43.086000+00:00',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'VW ID.4 Charge Limit',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:battery-charging-80',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 50.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.vw_id_4_charge_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '80',
  })
# ---
